adição de contagem de pontuação

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title> Snake Game </title>
 </head>
 <body>
+    <h1> Snake Game </h1>
+    <h3> Sua pontuação é: </h3> 
+    <h1 id="pontuacao"> 0 </h1> 
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 </html>
